<resources>
    <string name="app_name">TelematicsTechTask</string>
    <string name="enter_last_6_digits_of_imei">Enter last 6 digits of IMEI</string>
    <string name="imei">IMEI</string>
    <string name="vechile_details">Vechile Details</string>
    <string name="tag_name">Tag Name</string>
    <string name="registration_number">Registration Number</string>
    <string name="vechile_type">Vechile Type</string>
    <string name="add">Add</string>
    <string name="driver">Driver</string>
    <string name="vehicle_type">vehicle Type</string>
</resources>