<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="#F4F4F4"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="#F9F9F9"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
    <ScrollView
        android:layout_below="@+id/toolbar"
    android:layout_above="@+id/add_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_last_6_digits_of_imei"
    android:textStyle="normal"
    android:textSize="14sp"
    android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/iemi1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>

            <EditText
                android:id="@+id/iemi2"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>
            <EditText
                android:id="@+id/iemi3"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>
            <EditText
                android:id="@+id/iemi4"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>
            <EditText
                android:id="@+id/iemi5"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>
            <EditText
                android:id="@+id/iemi6"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_text_background"
                android:maxLength="1"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imei"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/imeivalue"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/qrcode"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vechile_details"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/tag_name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/tag_name"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"/>
        <EditText
            android:id="@+id/reg_no"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:hint="@string/registration_number"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"/>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_type"
            android:textStyle="normal"
            android:textSize="14sp"
            android:textColor="@color/black"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:id="@+id/RecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <LinearLayout
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Spinner

                android:id="@+id/vehicle_make"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginEnd="10dp"
                android:background="@drawable/spinner_opt_bg"
                android:gravity="start"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/vehicle_model"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/spinner_opt_bg"
                android:gravity="start"
                 />
        </LinearLayout>

        <Spinner
            android:id="@+id/manf_year"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            style="@android:style/Widget.Spinner.DropDown"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_opt_bg"
            android:gravity="start"
            />
        <Spinner
            android:id="@+id/fuel_type"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_opt_bg"
            android:gravity="start"
            />
        <Spinner
            android:id="@+id/capacity"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:spinnerMode="dropdown"
            style="@android:style/Widget.Spinner.DropDown"
            android:background="@drawable/spinner_opt_bg"
            android:gravity="start"
            />

        <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OwnerShip"
        android:textStyle="normal"
        android:textSize="14sp"
        android:textColor="@color/black"/>
        <RadioGroup
            android:layout_marginTop="10dp"
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:buttonTint="@color/red"
                android:layout_marginEnd="10dp"
                android:text="own" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/red"
                android:layout_height="wrap_content"
                android:text="Contractor" />
        </RadioGroup>
        <TextView
            android:id="@+id/driver"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:drawablePadding="10dp"
            android:text="@string/driver"
            android:gravity="start"
            android:layout_gravity="center"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:background="@drawable/edit_text_background"/>


    </LinearLayout>

</ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_margin="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_baseline_add_24"
        android:layout_alignParentBottom="true" />

</RelativeLayout>